--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-
+   <p id="first"></p>
+   <p id='second'></p>
 </body>
 
 </html>
+
+<style lang="scss">
+   p {
+      color: red;
+      font-size: 28px;
+      font-weight: bold;
+   }
+</style>
